# wordle-solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
wordle_solver/: main.py
